# ai_yergali_first

./: README.md
text-classification/cmd/: main.py
text-classification/internal/core/: classif_text.py
text-generator/: main.py  pyproject.toml
text-generator/cmd/: main.py
text-generator/internal/core/interfaces/: tag_repo.py
text-generator/internal/core/usecases/: gen_tags.py
text-generator/internal/db/: mongo_repo.py  tables.sql
text-generator/internal/db/postgres/: conn.py  pg_repo.py  postgres_interfece.py
